fix: overflow protection + some minor fixes

--- a/src/style/helpers/_m2global.scss
+++ b/src/style/helpers/_m2global.scss
@@ -188,9 +188,11 @@
 .m2button {
   display: flex;
   align-items: center;
-  width: 158px;
+  // width: 158px;
+  max-width: 300px;
   height: 60px;
   padding-left: 27px;
+  padding-right: 71px;
   font-weight: 500;
   font-size: 22px;
   line-height: 120%;
@@ -216,6 +218,12 @@
   @include media("mobile-450") {
     background-size: 18px;
   }
+
+  &__text {
+    white-space: nowrap;
+    overflow: hidden !important;
+    text-overflow: ellipsis;
+  }
 }
 
 // Temporary contains duplicated Neue Headline2 styles
@@ -229,6 +237,11 @@
   line-height: 110%;
   text-transform: uppercase;
   color: $main-green;
+
+  white-space: nowrap;
+  overflow: hidden !important;
+  text-overflow: ellipsis;
+
   @include animation;
 
   @include media("tablet-1200") {
