--- a/src/style/partials/m2/_hero.scss
+++ b/src/style/partials/m2/_hero.scss
@@ -170,6 +170,10 @@
 
     &__title {
       margin-bottom: 20px;
+      max-width: 140px;
+      white-space: nowrap;
+      overflow-x: hidden !important;
+      text-overflow: ellipsis;
 
       @include media("tablet") {
         margin-bottom: 10px;
